log
rm -f *.o
rm -f ircserv
c++ -Wall -Wextra -Werror -std=c++98  -o ircserv main.cpp Server.cpp Channel.cpp Commands.cpp User.cpp Utils.cpp
User.cpp:124:7: error: use of undeclared identifier 'user_options'
        if (!user_options(user, splitmsg))
             ^
User.cpp:126:6: error: use of undeclared identifier 'authorise'
        if(!authorise(user, cmd))
            ^
User.cpp:129:7: error: use of undeclared identifier 'pass_issue'
                        if(pass_issue != 1 && alr_reg != 1)
                           ^
User.cpp:129:26: error: use of undeclared identifier 'alr_reg'
                        if(pass_issue != 1 && alr_reg != 1)
                                              ^
User.cpp:137:12: error: no type named 'closeThis' in namespace 'Utils'
                                Utils::closeThis(*user);
                                ~~~~~~~^
User.cpp:143:56: error: use of undeclared identifier 'change_flag'
        if(splitmsg.size() > 0 && splitmsg.at(0) == "NICK" && change_flag == false)
                                                              ^
User.cpp:144:3: error: use of undeclared identifier 'change_user'
                change_user(user, splitmsg);
                ^
User.cpp:167:3: error: use of undeclared identifier 'user_cmds'
                user_cmds(user, splitmsg);
                ^
User.cpp:168:3: error: use of undeclared identifier 'change_flag'
                change_flag = false;
                ^
9 errors generated.
make: *** [ircserv] Error 1
